--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
 streamlit_chat==0.1.1
-streamlit==1.24.1
 google_cloud_aiplatform==1.28.1
 psycopg2==2.9.5
 langchain==0.0.262
@@ -7,3 +6,8 @@ protobuf==4.24.0
 python-dotenv==1.0.0
 streamlit_extras==0.3.0
 vertexai==0.0.1
+langchain==0.1.0
+langchain-google-genai==0.0.6
+requests==2.31.0
+streamlit==1.30.0
+streamlit-lottie==0.0.5
